--- a/Pruebas_de_control_S2/ControlPLL.qsf
+++ b/Pruebas_de_control_S2/ControlPLL.qsf
@@ -60,6 +60,7 @@ set_location_assignment PIN_E10 -to D12
 set_location_assignment PIN_C8 -to D21
 set_location_assignment PIN_E6 -to D22
 set_global_assignment -name SMF_FILE contador.smf
+set_global_assignment -name VHDL_FILE comparador.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
